--- a/Projects/Sorting_Page/css/styles.css
+++ b/Projects/Sorting_Page/css/styles.css
@@ -1,140 +1,14 @@
-/*======================= GOOGLE FONTS =====================*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
-
-/*=============== VARIABLES CSS ===============*/
-:root {
-    /*========== Colors ==========*/
-    /*Color mode HSL(hue, saturation, lightness)*/
-    --white-color: hsl(0, 0%, 100%);
-    --black-color: hsl(0, 0%, 0%);
-    /*========== Font and typography ==========*/
-    /*.5rem = 8px | 1rem = 16px ...*/
-    --body-font: "Poppins", sans-serif;
-    --h1-font-size: 1.75rem;
-    --normal-font-size: 1rem;
-    --small-font-size: .813rem;
-    /*========== Font weight ==========*/
-    --font-medium: 500;
+#visualization-container {
+    height: 400px;
+    width: 600px;
+    border: 1px solid #ccc;
+    position: relative;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
-}
-
-body {
-    color: #ededed;
-    padding-top: 60px;
-}
-
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px 10%;
-    background: #00215C;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-}
-
-.login__img {
+.bar {
+    width: 20px;
+    margin: 0 1px;
+    background-color: #3498db;
     position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.logo {
-    position: relative;
-    font-size: 25px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.navbar a {
-    display: inline-block;
-    font-size: 25px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 35px;
-    transition: .3s;
-}
-
-.navbar a:hover {
-    color: #FF1A7D;
-}
-
-.home {
-    position: relative;
-    width: 100%;
-    justify-content: space-between;
-    height: 100vh;
-    background: url(Main\img\login-bg.jpg);
-}
-
-/*=============== Boxes ===============*/
-
-.login__form {
-    position: relative;
-    background-color: hsla(0, 0%, 10%, 0.1);
-    border: 2px solid var(--white-color);
-    grid-template-columns: repeat(3, 33.33%);
-    margin-inline: 1.5rem;
-    padding: 2.5rem 1.5rem;
-    border-radius: 1rem;
-    backdrop-filter: blur(8px);
-    transition: height 0.3s ease; /* Add transition for height */
-    text-decoration: none; /* Remove the hyperlink */
-    color: inherit;
-}
-.login {
-    position: relative;
-    margin-top: 40px;
-    display: grid;
-    align-items: center;
-}
-
-.sorting-container {
-    display: flex;
-    align-items: center;
-}
-
-.Sorting__algos,
-.Sorting__description,
-.Sorting__picture {
-    flex: 1;
-    font-family: "Poppins", sans-serif;
-}
-
-.Sorting__algos {
-    text-align: center;
-    font-size: 40px;
-}
-
-.Sorting__description {
-    text-align: center;
-    font-size: 18px;
-}
-
-.Sorting__picture {
-    text-align: center;
-}
-
-.separator-vertical {
-    border-left: 1px solid #FFF; /* Adjust color and style as needed */
-    height: 200px; /* Adjust height as needed */
-    margin: 0 30px; /* Adjust spacing as needed */
-}
-
-.login__form:hover {
-    color: #FF1A7D; /* Change font color on hover */
-    border-color: #FF1A7D; /* Change border color on hover */
+    bottom: 0;
 }
