--- a/Projects/Sorting_Page/css/styles.css
+++ b/Projects/Sorting_Page/css/styles.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-
 .container{
     max-width: 100vw;
     height: 100vh;
@@ -20,22 +19,25 @@
 .bars_container{
     display: flex;
     flex-direction: row;
+    align-items: flex-end;
+    position: absolute;
+    bottom: 0;
 }
 
 .bar{
     width: 10px;
-    background-color: aqua;
-    /* margin: 0 2px; */
-    border-radius: 2px;
+    background-color: #FF1879;
+    margin: 0 2px;
+    border-radius: 1px;
 }
 
 body{
-    background-color: #2c3e50;
+    background-color: #000835;
 }
 
 .buttons_container > button, select{
-    width: 200px;
-    height: 30px;
+    width: 350px;
+    height: 40px;
     background-color: #677685;
     border: none;
     border-radius: 5px;
@@ -44,6 +46,7 @@ body{
     cursor: pointer;
     text-align: center;
     transition:  0.2s ease-in-out;
+    position: relative;
 }
 
 button:hover{
