--- a/Projects/guessthesong/css/styles.css
+++ b/Projects/guessthesong/css/styles.css
@@ -24,135 +24,49 @@
     box-sizing: border-box;
 }
 
-.container {
-    max-width: 100vw;
-    height: 100vh;
-    width: 95%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 0px;
-}
-
-.bars_container {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    position: absolute;
-    bottom: 0;
-}
-
-.bar {
-    width: 10px;
-    background-color: #FF1879;
-    margin: 0 2px;
-    border-radius: 1px;
-}
-
 body {
     background-color: #000835;
+    height: 100vh;
+    display: grid;
+    place-items: center;
 }
 
-.header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 200px;
-    background: #00215C;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* Center content vertically */
-    align-items: center; /* Center content horizontally */
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
+/* Play Button */
 
-.buttons_container {
-    display: flex;
-    align-items: center; /* Align buttons and sliders horizontally */
-}
-
-.buttons_container > button,
-.buttons_container > select {
-    width: 350px; /* Adjust the width of buttons and select */
-    height: 40px;
-    background-color: #677685;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-size: 14px;
-    cursor: pointer;
-    text-align: center;
-    transition: 0.2s ease-in-out;
-    margin: 0 10px;
-}
-
-button:hover {
-    background-color: #56697b;
-}
-.sliders_container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; /* Align sliders to the left */
-    margin-right: 20px; /* Adjust margin as needed for spacing */
-}
-
-#slider,
-#slider2 {
-    -webkit-appearance: none;
+.cus_plyBtn {
+    font-size: 100px;
+    color: black;
+    display: grid;
+    place-items: center;
+    height: 1em;
+    width: 1em;
+    border-radius: 50%;
+    border: 2px solid black;
     background: white;
     cursor: pointer;
-    height: 0.5rem;
-    border-radius: 5px;
-    margin-bottom: 30px; /* Add margin between sliders */
-    width: 150px; /* Set a width for the sliders */
+    transition: 0.3s;
 }
 
-#slider::-webkit-slider-thumb,
-#slider2::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    background-color: #FF1879;
-    height: 2rem;
-    width: 1rem;
-    border-radius: 5px;
-    border: 1px solid #000835;
-    margin-top: auto;
-}
-
-#slider::-moz-range-thumb,
-#slider2::-moz-range-thumb {
-    appearance: none;
-    margin-top: auto;
-    background-color: #FF1879;
-    height: 1rem;
-    width: 1rem;
-    border-radius: 5px;
-    border: 1px solid #000835;
-}
-
-.nav-heading {
+.cus_plyBtn::before {
+    content: "";
     display: inline-block;
-    text-align: center;
-    padding: 1%;
-    margin-top: -35px; /* Adjust the margin-top value */
-    color: white;
-    font-size: var(--large-font-size);
-    font-family: var(--body-font);
+    border-left: 0.3em solid;
+    border-top: 0.18em solid transparent;
+    border-bottom: 0.18em solid transparent;
+    margin-right: -0.08em;
+}
+.cus_plyBtn:hover {
+    background: #FF1879;
+}
+.pulse-animation {
+    animation: pulse 0.85s ease;
 }
 
-.slider_text {
-    display: flex;
-    flex-direction: column; /* Stack text vertically */
-    align-items: flex-end; /* Align text to the bottom */
-    margin-right: 10px; /* Adjust margin as needed for spacing */
-}
-
-.slider_text p {
-    margin-bottom: 25px; /* Adjust as needed for spacing between text elements */
-    color: white; /* Set the text color */
-    font-size: var(--normal-font-size); /* Set the font size */
-    white-space: nowrap; /* Prevent text from wrapping */
+@keyframes pulse {
+    0% {
+        box-shadow: 0em 0em 0em 0em #FF1879;
+    }
+    100% {
+        box-shadow: 0em 0em 0em 0.3em hsla(250,100%,75%,0);
+    }
 }
