--- a/Projects/guessthesong/css/styles.css
+++ b/Projects/guessthesong/css/styles.css
@@ -11,7 +11,6 @@
     /*.5rem = 8px | 1rem = 16px ...*/
     --body-font: "Poppins", sans-serif;
     --h1-font-size: 1.75rem;
-    --large-font-size: 3rem;
     --normal-font-size: 1rem;
     --small-font-size: .813rem;
     /*========== Font weight ==========*/
@@ -22,6 +21,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 
 h1 {
@@ -35,13 +35,59 @@ body {
     height: 100vh;
     display: grid;
     place-items: center;
+    color: #ededed;
+    padding-top: 60px;
 }
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background: #00215C;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
 .login__img {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
+}
+
+.logo {
+    position: relative;
+    font-size: 25px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.navbar a {
+    display: inline-block;
+    font-size: 25px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 35px;
+    transition: .3s;
+}
+
+.navbar a:hover {
+    color: #FF1A7D;
+}
+
+.home {
+    position: relative;
+    width: 100%;
+    justify-content: space-between;
+    height: 100vh;
+    background: url(Main\img\login-bg.jpg);
 }
 
 .skipBtn {
@@ -84,7 +130,7 @@ body {
 /* Main background */
 .maincontainer {
     width: 1500px;
-    height: 750px;
+    height: 800px;
 
     background-color: hsla(0, 0%, 10%, 0.1);
     border: 2px solid var(--white-color);
@@ -94,11 +140,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 25px;
 
 }
 
-/* Play Button */
+/* Play Button Container */
+.playBtnContainer {
+    position: relative;
+    margin-top: 430px; /* Adjust this value as needed */
+}
 
+/* Play Button */
 .playBtn {
     font-size: 100px;
     color: black;
@@ -111,6 +163,9 @@ body {
     background: white;
     cursor: pointer;
     transition: 0.3s;
+    position: absolute;
+    bottom: 0; /* Position the button at the bottom of its container */
+    transform: translateX(-50%); /* Center horizontally */
 }
 
 .playBtn::before {
@@ -121,9 +176,11 @@ body {
     border-bottom: 0.18em solid transparent;
     margin-right: -0.08em;
 }
+
 .playBtn:hover {
     background: #FF1879;
 }
+
 .pulse-animation {
     animation: pulse 0.85s ease;
 }
@@ -173,14 +230,14 @@ body {
 /* guess */
 
 .input-container {
-    position: relative;
     display: inline-block; /* Ensure that the icon and input are displayed inline */
+    margin-top: -60px; /* Adjust as needed */
 }
 
 #guess {
     width: 1404px;
     font-size: 21px;
-    margin-top: 350px;
+    margin-top: 100px;
     border-radius: 5px;
     border: 2px solid black;
     padding: 10px 50px;
