--- a/Projects/guessthesong/css/styles.css
+++ b/Projects/guessthesong/css/styles.css
@@ -345,3 +345,71 @@ body {
     margin-right: 20px;
     font-weight: bold;
 }
+
+.winningScreen {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    width: 450px;
+    height: 300px;
+    box-shadow: 0 25px 50px rgba(0,0,0,0.1),
+    0 0 0 1000px rgba(255, 255, 255, 0.301);
+    display: none;
+    justify-content: center;
+    padding: 40px;
+    color: black;
+    border: 2px solid black;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.playAgain {
+    position: absolute;
+    top: 60%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    padding: 10px 20px;
+    background: white;
+    color: black;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 2px solid black;
+    z-index: 1000;
+}
+
+.playAgain:hover {
+    background: #FF1879;
+}
+
+.winningScreen.open {
+    display: flex;
+    opacity: 1;
+    z-index: 999;
+}
+
+#my-canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 100000;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+#my-canvas.active {
+    visibility: visible;
+}
+
+.confetti-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 999;
+}
