--- a/Projects/guessthesong/css/styles.css
+++ b/Projects/guessthesong/css/styles.css
@@ -365,6 +365,25 @@ body {
     text-align: center;
 }
 
+.losingScreen {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    width: 450px;
+    height: 300px;
+    box-shadow: 0 25px 50px rgba(0,0,0,0.1),
+    0 0 0 1000px rgba(255, 255, 255, 0.301);
+    display: none;
+    justify-content: center;
+    padding: 40px;
+    color: black;
+    border: 2px solid black;
+    border-radius: 5px;
+    text-align: center;
+}
+
 .playAgain {
     position: absolute;
     top: 60%;
@@ -384,6 +403,12 @@ body {
 }
 
 .winningScreen.open {
+    display: flex;
+    opacity: 1;
+    z-index: 999;
+}
+
+.losingScreen.open {
     display: flex;
     opacity: 1;
     z-index: 999;
