--- a/Projects/guessthesong/css/styles.css
+++ b/Projects/guessthesong/css/styles.css
@@ -18,8 +18,8 @@
 }
 
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
@@ -38,7 +38,7 @@ body {
     place-items: center;
     color: #ededed;
     padding-top: 90px;
-   overflow-y: hidden;
+    overflow-y: hidden;
 }
 
 .header {
@@ -88,7 +88,7 @@ body {
     position: relative;
     width: 100%;
     justify-content: space-between;
-    height: 100vh;
+    height: 100%;
     background: url(Main\img\login-bg.jpg);
 }
 
