--- a/Projects/guessthesong/css/styles.css
+++ b/Projects/guessthesong/css/styles.css
@@ -32,8 +32,13 @@ h1 {
 }
 
 body {
+    background-color: #000835;
+    height: 100%;
+    display: grid;
+    place-items: center;
     color: #ededed;
-    padding-top: 60px;
+    padding-top: 90px;
+    overflow-y: hidden;
 }
 
 .header {
@@ -83,8 +88,8 @@ body {
     position: relative;
     width: 100%;
     justify-content: space-between;
-    height: 100%;
-    background: url(Main\img\login-bg.jpg);
+    height: 100vh;
+    background: url(..\img\login-bg.jpg);
 }
 
 .skipBtn {
