--- a/Projects/guessthesong/css/styles.css
+++ b/Projects/guessthesong/css/styles.css
@@ -21,7 +21,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 h1 {
@@ -53,7 +53,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100; /* Ensure header is on top */
+    z-index: 100;
 }
 
 .login__img {
@@ -85,6 +85,7 @@ body {
 .navbar a:hover {
     color: #FF1A7D;
 }
+
 
 .home {
     position: relative;
