--- a/Projects/css/styles.css
+++ b/Projects/css/styles.css
@@ -76,7 +76,7 @@ body {
     position: relative;
     width: 100%;
     justify-content: space-between;
-    height: 100vh;
+    height: 100%;
     background: url(Main\img\login-bg.jpg);
 }
 
