--- a/Projects/guessthesong/css/styles.css
+++ b/Projects/guessthesong/css/styles.css
@@ -32,13 +32,9 @@ h1 {
 }
 
 body {
-    background-color: #000835;
-    height: 100%;
-    display: grid;
-    place-items: center;
     color: #ededed;
-    padding-top: 90px;
-   overflow-y: hidden;
+    padding-top: 60px;
+    overflow: hidden;
 }
 
 .header {
@@ -88,8 +84,8 @@ body {
     position: relative;
     width: 100%;
     justify-content: space-between;
-    height: 100vh;
-    background: url(Main\img\login-bg.jpg);
+    height: 100%;
+    background: url(..\img\login-bg.jpg);
 }
 
 .skipBtn {
@@ -142,7 +138,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 25px;
+    margin-top: 50px;
+    margin-left: 10%;
 
 }
 
